# pydmqmc

./: .gitignore  .readthedocs.yml  EQUILIBRIUM-H4-STO3G.hamil  LICENSE  OPT_B2_STO3G_MS2-0_SYM1.hamil  README.md  STRETCHED-H4-STO3G.hamil  dmqmc_object.py  drive_DMQMC.py  drive_analytical_non_symmetric_DMQMC.py  drive_analytical_non_symmetric_DMQMC_rowslice.py  drive_analytical_non_symmetric_IP.py  drive_analytical_non_symmetric_IP_DMQMC.py  drive_analytical_non_symmetric_IP_row_random.py  drive_analytical_non_symmetric_IP_row_specific.py  drive_fciqmc.py  drive_imaginary_prop_DMQMC.py  drive_imaginary_prop_DMQMC_v2.py  drive_row_scan_intiator_stochastic_symmetric_DMQMC.py  drive_row_scan_walker_reweight_intiator_stochastic_symmetric_DMQMC.py  drive_sdmqmc.py  drive_sqmc.py  drive_stochastic_dmqmc.py  drive_symmetric_PIP.py  drive_symmetric_dmqmc_stochastic_rounding_sign_seperated.py  environment.yml  example.py  excitations.py  functions.py  integrals_readin.py  modules.py  pyproject.toml  semi_stochastic_fciqmc_driver.py  test.py  utilities.py
.github/workflows/: python-app.yml  python-publish.yml
development/: analysis-ipdmqmc.py  analysis-rows-ipdmqmc.py  average_betaloops.py  check_dmqmc.py  functions.py  initial_dm.npy  integrals_readin.py  main-ex-level-0.py  main-ex-level-0_refactor.py  main-ipdmqmc.py  main-symmetric.py  main.py  njit_functions.py  power_method.py  run_tests.sh  test.py  utilities.py
development/drivers/: drive_DMQMC.py  drive_adaptive_DMQMC.py
development/edge_ftmbpt/: ftfci.py  garnet.py  integrals_readin.py  manybody_fermidirac.py  manybody_fermidirac02.py  manybody_thf.py  orbitalbasis_fermidirac.py
development/edge_realtime/: local_utils.py  main.py  qmc.py  qmc_utils.py  von_neumann.py
development/edge_realtime_using_mpi_and_numba/: conda_env.yml  dipoles.py  example.sh  example_001A_euler.out  example_001B_stoch_euler.out  example_002A_symplectic.out  example_002B_stoch_symplectic.out  example_003A_rung_kutta_002_mp.out  example_003B_stoch_rung_kutta_002_mp.out  example_004A_rung_kutta_002_heun.out  example_004B_stoch_rung_kutta_002_heun.out  example_005A_rung_kutta_004.out  example_005B_stoch_rung_kutta_004.out  field_functions.py  integrators.py  local_utils.py  mpi.py  psi_wrappers.py  readin_system.py  readme.md  run_cla_psi.py  stochastic_integrators.py  stochastic_utils.py  uconv.py
development/edge_tdms/: exact_tdm.py  local_utils.py
development/outline_example/: h4.py
docs/: rtd_environment.yml
docs/source/: analytic.rst  api.rst  api_base.rst  api_dmqmc.rst  api_methods.rst  api_systems.rst  conf.py  dmqmc.rst  index.rst  (+7 more)
drivers/: drive_DMQMC.py  drive_adaptive_DMQMC.py  drive_analytical_non_symmetric_DMQMC.py  drive_analytical_symmetric_DMQMC.py  drive_asm_IPDMQMC_VMAX_calculation.py  drive_asym_DMQMC.py  drive_asym_DMQMC_Energy_vs_NbetaNrows.py  drive_asym_IPDMQMC_Energy_vs_NbetaNrows.py  drive_imaginary_prop_DMQMC_v3.py  drive_intiator_stochastic_symmetric_DMQMC.py  drive_ipipdmqmc.py  drive_ipipdmqmc_nfail.py  drive_new_intiator_stochastic_symmetric_DMQMC.py  drive_sipdmqmc.py  drive_stochastic_PIP.py  drive_stochastic_symmetric_DMQMC.py
outline_example/: .h2.py.swp  h2.py
pydmqmc/: __init__.py
systems/: H2-STO-3G-0.74Ang.fcidump  STRICT-EIGENVALUES-STO3G-EQM-H6.FCIDUMP  STRICT-EIGENVALUES-STO3G-STR-H6.FCIDUMP  STRICT-EIGENVALUES-STO3G-STR-H8.FCIDUMP  STRICT-STO3G-STR-H4.FCIDUMP  UEG-N2-M14-rs5-SC.fcidump
tests/: check_coverage.sh  run_parallel_tests.sh  test_base.py
(+209 files in other folders)
