[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pydmqmc"
version = "0.0.1"
authors = [
    { name="William Van Benschoten", email="vanwill2@msu.edu" },
    { name="Claire Kopenhafer", email="kopenhaf@msu.edu"}
]
description = "Python library for density matrix quantum Monte Carlo"
# classifiers
# requires-python >= 3.10
dependencies = [
    "flake8",
    "flake8-docstrings",
    "flake8-pyproject",
    "numpy",
    "numpydoc",
    "numba",
    "pandas",
    "pytest",
    "sphinx",
    "sympy"
]

[tool.setuptools]
packages = ["pydmqmc"]

[tool.flake8]
docstring-convention = "numpy"
exclude = [
    "docs",
    "tests",
    "development",
]
per-file-ignores = [
    # imported but unused
    "__init__.py: F401",
    "integral.py: E203"
]