[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pydmqmc"
version = "0.0.1"
authors = [
    { name="Claire Kopenhafer", email="kopenhaf@msu.edu"},
    { name="William Van Benschoten", email="vanwill2@msu.edu" },
]
description = "Python library for density matrix quantum Monte Carlo"
# classifiers
# requires-python >= 3.10
dependencies = [  # TODO separate out development dependencies
    "coverage",
    "mpi4py",  # recommend installing with pip
    "mpi-pytest",  # not available with conda
    "numba",
    "numpy",
    "numpydoc",
    "pandas",
    "pytest",
    "pytest-lazy-fixtures",  # not available with conda
    "ruff",
    "scipy",
    "sphinx",
    "sphinx_rtd_theme",
    "sphinxcontrib-bibtex",
    "sympy"
]

[tool.ruff]
exclude = [
    "docs",
    "tests",
]
line-length = 88

[tool.ruff.lint]
select = ["D", "E", "F", "W"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
    "__init__.py" = ["F401"]  # import but unused
    "registry.py" = ["F821"]  # Undefined name
    "slater_condon.py" = ["F821"]  # Undefined name
    "parallel_integrators.py" = ["F821"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::UserWarning",
]
addopts = ["-m not parallel"]
